--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -41,15 +41,18 @@ else()
 endif()
 
 add_compile_definitions(
-    _APP_NAME_STR="${APP_NAME}"
-    _APP_NAME_EXT_STR=${APP_NAME_EXT}
-    _APP_VER_STR="${APP_VER}"
-    _APP_TITLEID=${SFO_TITLE_ID}
-    _APP_DIR_NAME="${CORE_NAME}"
-    _APP_TITLE_NAME="${SFO_TITLE_NAME}"
-    _CORE_FULL_NAME="${CORE_FULL_NAME}"
-    _CORE_SHORT_NAME="${CORE_SHORT_NAME}"
-    _CONSOLE="${CONSOLE}"
+
+    # _APP_NAME_STR="${APP_NAME}"
+    # _APP_NAME_EXT_STR=${APP_NAME_EXT}
+    # _APP_VER_STR="${APP_VER}"
+    # _APP_TITLEID=${SFO_TITLE_ID}
+    # _APP_DIR_NAME="${CORE_NAME}"
+    # _APP_TITLE_NAME="${SFO_TITLE_NAME}"
+    # _CORE_FULL_NAME="${CORE_FULL_NAME}"
+    # _CORE_SHORT_NAME="${CORE_SHORT_NAME}"
+    # _CONSOLE="${CONSOLE}"
+    DEFAULT_CORE_NAME=${CORE}
+    APP_VER_STR="${APP_VER}"
 
     # SCE_LIBC_SIZE=0x400000
 )
