--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -51,7 +51,7 @@ add_compile_definitions(
     # _CORE_FULL_NAME="${CORE_FULL_NAME}"
     # _CORE_SHORT_NAME="${CORE_SHORT_NAME}"
     # _CONSOLE="${CONSOLE}"
-    DEFAULT_CORE_NAME=${CORE}
+    DEFAULT_CORE_NAME="${CORE}"
     APP_VER_STR="${APP_VER}"
 
     # SCE_LIBC_SIZE=0x400000
