--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -49,6 +49,7 @@ if(NOT ${CMAKE_CURRENT_SOURCE_DIR}/source/language_frontend.cpp IN_LIST SRC)
 endif()
 
 # add_compile_definitions(SCE_LIBC_SIZE=0xA00000)
+add_compile_definitions(APP_VER_STR="${APP_VER}")
 add_library(frontend OBJECT ${SRC})
 
 add_custom_target(FILE_TOUCHER COMMAND ${CMAKE_COMMAND} -E touch_nocreate ${CMAKE_CURRENT_SOURCE_DIR}/source/ui/tab_about.cpp)
