--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,49 @@ set(CORE_SHORTS
     vice
     px68k)
 
+set(TITLE_IDS
+    GPSP4VITA
+    VBANEXT4V
+    GAMBATTEV
+    FBALITE4V
+    FBNEO4VIT
+    FBA20124V
+    SNES024VT
+    SNES054VT
+    SNES104VT
+    FCEUMM4VT
+    NESTP4VIT
+    GENESIS4V
+    GENWIDE4V
+    PICODR4VT
+    MPCEF4VIT
+    MPCESG4VT
+    MNGP4VITA
+    WSWAN4VIT
+    PCSX4V001
+    STELLA4VI
+    PROSYS4PV
+    A8004VITA
+    DOSPURE4V
+    MAME03P4V
+    MAME2K34V
+    VECX4VITA
+    UAE4VITAP
+    FUSE4VITA
+    NEOCD4VIT
+    SUPA4VITA
+    FBNEOX4VP
+    MAME2K3XV
+    CHIMERA4V
+    TGBD4VITA
+    NEKOP2VIT
+    FMSX4VITA
+    BLUEMSX4V
+    NP2KAIVIT
+    VICE4VITA
+    PX68K4VIT
+)
+
 set(BUILD_LIST "All" "Arch" ${CORES})
 string(REPLACE "|" " " BUILD_LIST_STR ${BUILD_LIST})
 set(BUILD "Arch" CACHE STRING ${BUILD_LIST_STR})
@@ -159,6 +202,7 @@ math(EXPR length "${length} - 1")
 foreach(index RANGE ${length})
     list(GET CORES ${index} CORE)
     list(GET CORE_SHORTS ${index} CORE_SHORT)
+    list(GET TITLE_IDS ${index} SFO_TITLE_ID)
 
     if(BUILD STREQUAL "All" OR BUILD STREQUAL "Arch" OR BUILD STREQUAL ${CORE})
         # create core suprx
