--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -5,7 +5,57 @@ set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${CORE})
 set(CORE_MAKEFILE_NAME Makefile)
 
 if(CORE STREQUAL "gpsp")
+elseif(CORE STREQUAL "vba_next")
+elseif(CORE STREQUAL "gambatte")
+elseif(CORE STREQUAL "fba_lite")
+    set(CORE_ARGS ${CORE_ARGS} HAVE_NEON=1)
+elseif(CORE STREQUAL "fbneo")
+    set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
+elseif(CORE STREQUAL "fbalpha2012")
 elseif(CORE STREQUAL "snes9x2002")
+elseif(CORE STREQUAL "snes9x2005")
+    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
+elseif(CORE STREQUAL "snes9x2010")
+elseif(CORE STREQUAL "fceumm")
+elseif(CORE STREQUAL "nestopia")
+elseif(CORE STREQUAL "genesis_plus_gx")
+elseif(CORE STREQUAL "genesis_plus_gx_wide")
+elseif(CORE STREQUAL "picodrive")
+elseif(CORE STREQUAL "mednafen_pce_fast")
+    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
+elseif(CORE STREQUAL "mednafen_supergrafx")
+    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
+elseif(CORE STREQUAL "mednafen_ngp")
+elseif(CORE STREQUAL "mednafen_wswan")
+elseif(CORE STREQUAL "pcsx_rearmed")
+    set(CORE_ARGS ${CORE_ARGS} DYNAREC=ari64)
+elseif(CORE STREQUAL "stella2014")
+elseif(CORE STREQUAL "prosystem")
+elseif(CORE STREQUAL "atari800")
+elseif(CORE STREQUAL "dosbox_pure")
+elseif(CORE STREQUAL "mame2003_plus")
+    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
+elseif(CORE STREQUAL "mame2003")
+    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
+elseif(CORE STREQUAL "vecx")
+elseif(CORE STREQUAL "uae4arm")
+elseif(CORE STREQUAL "fuse")
+elseif(CORE STREQUAL "neocd")
+elseif(CORE STREQUAL "supafaust")
+    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
+elseif(CORE STREQUAL "fbneo_xtreme")
+    set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
+elseif(CORE STREQUAL "mame2003_xtreme")
+    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
+elseif(CORE STREQUAL "chimerasnes")
+    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
+elseif(CORE STREQUAL "tgbdual")
+elseif(CORE STREQUAL "nekop2")
+elseif(CORE STREQUAL "fmsx")
+elseif(CORE STREQUAL "bluemsx")
+elseif(CORE STREQUAL "nekop2kai")
+elseif(CORE STREQUAL "vice")
+elseif(CORE STREQUAL "px68k")
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
