--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -92,9 +92,10 @@ set(VITA_MAKE_FSELF_FLAGS "-a 0x2800000000000001")
 vita_create_self(${EBOOT_NAME} ${ELF_NAME} STRIPPED)
 
 if(NOT CORE STREQUAL "frontend")
+    set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${CORE}/pkg)
     set(PRIVATE_PKG_FILES "")
-    collect_files(PRIVATE_PKG_FILES ${CMAKE_CURRENT_SOURCE_DIR}/${CORE}/pkg)
-    list(APPEND PRIVATE_PKG_FILES FILE ${CMAKE_CURRENT_BINARY_DIR}/../cores/${CORE}/${LIBRETRO_SUPRX} ${LIBRETRO_SUPRX})
+    collect_files(PRIVATE_PKG_FILES ${PRIVATE_PKG_DIR})
+    list(APPEND PRIVATE_PKG_FILES FILE ${CMAKE_CURRENT_BINARY_DIR}/../../cores/${CORE}/${LIBRETRO_SUPRX} ${LIBRETRO_SUPRX})
 
     set(VITA_MKSFOEX_FLAGS -d ATTRIBUTE2=12)
     vita_create_vpk(
