--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -7,20 +7,20 @@ set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1)
 if(CORE STREQUAL "gpsp")
 elseif(CORE STREQUAL "vba_next")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vba-next)
-    set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
 elseif(CORE STREQUAL "gambatte")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/gambatte-libretro)
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "fba_lite")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-fba-lite)
-    set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
     set(CORE_ARGS ${CORE_ARGS} HAVE_NEON=1)
 elseif(CORE STREQUAL "fbneo")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-fbneo/src/burner/libretro)
     set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
 elseif(CORE STREQUAL "fbalpha2012")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fbalpha2012/svn-current/trunk)
-    set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
 elseif(CORE STREQUAL "snes9x2002")
 elseif(CORE STREQUAL "snes9x2005_plus")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/snes9x2005)
@@ -38,18 +38,21 @@ elseif(CORE STREQUAL "genesis_plus_gx_wide")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "picodrive")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
 elseif(CORE STREQUAL "mednafen_pce_fast")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-pce-fast-libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
 elseif(CORE STREQUAL "mednafen_supergrafx")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-supergrafx-libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
 elseif(CORE STREQUAL "mednafen_ngp")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-ngp-libretro)
 elseif(CORE STREQUAL "mednafen_wswan")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-wswan-libretro)
 elseif(CORE STREQUAL "pcsx_rearmed")
-    set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
     set(CORE_ARGS ${CORE_ARGS} DYNAREC=ari64)
 elseif(CORE STREQUAL "stella2014")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/stella2014-libretro)
@@ -61,14 +64,17 @@ elseif(CORE STREQUAL "dosbox_pure")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dosbox-pure)
 elseif(CORE STREQUAL "mame2003_plus")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mame2003-plus-libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
 elseif(CORE STREQUAL "mame2003")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mame2003-libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
 elseif(CORE STREQUAL "vecx")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-vecx)
 elseif(CORE STREQUAL "uae4arm")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/uae4arm-libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 elseif(CORE STREQUAL "fuse")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fuse-libretro)
 elseif(CORE STREQUAL "neocd")
@@ -78,6 +84,7 @@ elseif(CORE STREQUAL "mednafen_supafaust")
     set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
 elseif(CORE STREQUAL "km_fbneo_xtreme_amped")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/FBNeo-Xtreme-Amped/src/burner/libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
 elseif(CORE STREQUAL "km_mame2003_xtreme_amped")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mame2003-xtreme)
