--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -96,7 +96,7 @@ if(NOT CORE STREQUAL "frontend")
     set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${CORE}/pkg)
     set(PRIVATE_PKG_FILES "")
     collect_files(PRIVATE_PKG_FILES ${PRIVATE_PKG_DIR})
-    list(APPEND PRIVATE_PKG_FILES FILE ${CMAKE_CURRENT_BINARY_DIR}/../../cores/${CORE}/${LIBRETRO_SUPRX} ${LIBRETRO_SUPRX})
+    list(APPEND PRIVATE_PKG_FILES FILE "${CMAKE_CURRENT_BINARY_DIR}/../../cores/${CORE}/${LIBRETRO_SUPRX}" "modules/${LIBRETRO_SUPRX}")
 
     set(VITA_MKSFOEX_FLAGS -d ATTRIBUTE2=12)
     vita_create_vpk(
