--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -176,7 +176,7 @@ target_link_libraries(${LIBRETRO_ELF}
 set_target_properties(${LIBRETRO_ELF} PROPERTIES COMPILE_FLAGS "-Wno-main -DSCE_LIBC_SIZE=0xA00000")
 
 set(VITA_MAKE_FSELF_FLAGS "-a 0x2800000000000001")
-vita_create_self(${LIBRETRO_SUPRX} ${LIBRETRO_ELF} STRIPPED UNSAFE CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/core.yml)
+vita_create_self(${LIBRETRO_SUPRX} ${LIBRETRO_ELF} CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/core.yml)
 
 if(CREATE_STUB)
     vita_create_stubs(.. ${LIBRETRO_ELF} ${CMAKE_CURRENT_SOURCE_DIR}/core.yml)
