--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -120,8 +120,8 @@ if(NOT CORE STREQUAL "frontend")
     endif()
 
     if(${CMAKE_VERSION} VERSION_LESS "3.20.0")
-        add_dependencies(VPK_${APP_NAME} ${VPK_NAME} ${ARC_TAG})
+        add_dependencies(VPK_${APP_NAME} ${VPK_NAME} ${CORE}.suprx-self)
     else()
-        add_dependencies(VPK_${APP_NAME} ${VPK_NAME}-vpk ${ARC_TAG})
+        add_dependencies(VPK_${APP_NAME} ${VPK_NAME}-vpk ${CORE}.suprx-self)
     endif()
 endif()
