--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -158,6 +158,12 @@ target_link_libraries(${LIBRETRO_ELF}
     zlibstatic
     FLAC
     ogg
+    stdc++
+    c
+    g
+    m
+    gcc
+    k
     SceLibKernel_stub_weak
     SceIofilemgr_stub_weak
     SceDisplay_stub_weak
